--- a/style.css
+++ b/style.css
@@ -437,7 +437,7 @@ th {
 html {
   background: #ede0ce;
   color: #161616;
-  font-family: "Source Sans Pro";
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 85%;
   line-height: 1.5;
 }
@@ -511,7 +511,6 @@ header p {
 }
 
 h1 {
-  font-family: "Montserrat";
   font-size: 2.25rem;
   font-weight: 700;
   letter-spacing: 0.25rem;
